
Hibernate Plugin:
  Right mouse HQL editor function: "View in mapped objects" (Ctrl+B) matched Entity name not exactly enough.

File export:
  Executing command on exported file didn't on MS Windows work because of erroneous file name format.
  Exporting SQL queries directly from the SQL editor (not UI-Tables)
  caused Even Dispatch Thread (EDT) violations.

Enhancements:

Export of multiple SQL results.
  When exporting to MS Excel, multiple data sheets/tabs in the same file are created.
  When exporting to other formats, multiple files are created.
  The export dialog allows to name sheets/tabs or files respectively.
  Howto:
  To export multiple SQL results right click or open tools popup (ctl+t) and choose "sql2file"
  on multiple SQL queries (separated by statement separators) to open the file export dialog.
  To export multiple SQL result UI tables execute multiple SQLs (ctrl+enter).
  Then right click one of the UI result tables to open the file export dialog.


4.5.1 (11/13/2022)
==================

Bug fixes:

Command line mode:
 1. Exception occurred at the end of SQL output.
 2. Improved detection of Java-VM in Linux script squirrelcli.sh
 Example for command line mode on Linux:
 <squirrel-home>/squirrelcli/squirrelcli.sh -alias "yourAlias" -sql "SELECT * FROM <yourTable>"

Saving all open files switched the active SQL editor.

Editing SQL result tables didn't work.
  The following message box was displayed when the problem occurred:
  "Cannot edit table because table cannot be found or table name is not unique in DB."
  Possible workaround:
  Go to menu File --> Global Preferences --> tab Scripts --> Check "Qualify table names ...".


4.5.0 (10/10/2022)
==================

Enhancements:

Introduced Java 19 compatibility.

Saved Sessions improvement (See the four buttons at the right of SQuirreL's topmost toolbar):
  The Saved Sessions dialog now allows to search for Saved Sessions.
  See menu Windows --> Open Saved Session.
