@@ -29,3 +29,6 @@ MainFrameStatusBar.gc=Garbage collection requested
 
 MainFrameToolBar.activeSession=Active Session:
 MainFrameToolBar.connectTo= Connect to: 
+
+
+MainFrameTitleHandler.saved.session=Saved Session: {0}
