@@ -87,7 +87,7 @@ SessionSaveAction.tools.popup.description=Save Session
 GitCommitSaveAction.tools.popup.description=Save Session and GIT commit
 
 SavedSessionMoreCtrl.rename=Rename ...
-SavedSessionMoreCtrl.no.section.to.rename=No Saved Session selected to rename.
+SavedSessionMoreCtrl.no.session.to.rename=No Saved Session selected to rename.
 
 SavedSessionMoreDlg.max.savedSession=Maximum number of Saved Session (longest unused will be removed, 0 means no limit)
 
