@@ -93,6 +93,8 @@ public class SessionManageAction extends SquirrelAction implements ISessionActio
       _session.getSavedSession().setName(sessionSaveDlg.getSavedSessionName());
       Main.getApplication().getSavedSessionsManager().moveToTop(_session.getSavedSession());
       // SessionPersister.saveSession(session, false);
+
+      Main.getApplication().getMainFrame().getMainFrameTitleHandler().updateMainFrameTitle();
    }
 
    @Override
